git commit -m 'test'

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,7 +3,26 @@
     // 悬停以查看现有属性的描述。
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [
+ 
+    "configurations": [  
+ {
+     "name": ".NET Core Launch (console)",
+     "type": "coreclr",
+     "request": "launch",
+     "preLaunchTask": "build",
+     "program": "${workspaceRoot}/test_netcore/bin/Debug/netcoreapp2.0/test_netcore.dll",
+     "args": [],
+     "cwd": "${workspaceRoot}",
+     "stopAtEntry": false,
+     "console": "internalConsole"
+ },
+    {
+        "type": "node",
+        "request": "launch",
+        "name": "Launch Program",
+        "program": "${workspaceFolder}\\test_react\\app.js"
+    },
+ 
         {
             "name": "Python",
             "type": "python",
