--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "C:\\YL\\Anaconda\\python.exe",
+    "python.pythonPath": "d:\\env\\Anaconda3\\python.exe",
     "git.ignoreLimitWarning": true
 }
